--- a/tasks/testapi.ipynb
+++ b/tasks/testapi.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Været i Trondheim: broken clouds\n",
-      "Temperatur: 1.89°C\n"
+      "Været i søgne: clear sky\n",
+      "Temperatur: 2.92°C\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "by = \"Trondheim\"\n",
+    "by = \"søgne\"\n",
     "api_key = \"4df1bbca7b65e146aa75166acfbb019d\"\n",
     "url = f\"https://api.openweathermap.org/data/2.5/weather?q={by}&appid={api_key}&units=metric\"\n",
     "\n",
