--- a/tasks/code.ipynb
+++ b/tasks/code.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temperature: 3.21 °C\n",
-      "Wind: 1.79\n",
-      "Pressure: 1002\n",
-      "Humidity: 54\n",
-      "Description: few clouds\n"
+      "Temperature: 4.97 °C\n",
+      "Wind: 2.24\n",
+      "Pressure: 1020\n",
+      "Humidity: 87\n",
+      "Description: light rain\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
     "base_url = 'https://api.openweathermap.org/data/2.5/weather'\n",
     "\n",
     "# Fyll ut byen\n",
-    "city = 'Oslo'\n",
+    "city = 'Trondheim'\n",
     "\n",
     "# Bygg URL-en med API-nøkkelen og byen\n",
     "url = f\"{base_url}?q={city}&appid={api_key}&units=metric\"\n",
@@ -45,6 +45,8 @@
     "wind = data['wind']['speed']\n",
     "description = data['weather'][0]['description']\n",
     "temp = data['main']['temp']\n",
+    "\n",
+    "#Leah mener det er lurt å ta inn klokkeslett, viktig her å tenke litt\n",
     "\n",
     "# Skriv ut resultatene\n",
     "print('Temperature:', temp, '°C')\n",
