Lagde et program med pandas

--- a/data/pandas.ipynb
+++ b/data/pandas.ipynb
@@ -2,11 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feil ved henting av data: 400\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd \n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sett inn din API-nøkkel her\n",
+    "API_KEY = \"4df1bbca7b65e146aa75166acfbb019d\"\n",
+    "\n",
+    "# Endepunkt for GLOBE værdata\n",
+    "API_URL = 'https://api.openweathermap.org/data/2.5/weather'\n",
+    "\n",
+    "\n",
+    "# Hent data fra API\n",
+    "response = requests.get(API_URL, headers={\"x-api-key\": API_KEY})\n",
+    "\n",
+    "# Sjekk om forespørselen var vellykket\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "    \n",
+    "    # Ekstraher relevante data\n",
+    "    målinger = []\n",
+    "    for entry in data.get(\"results\", []):\n",
+    "        målinger.append({\n",
+    "            \"Dato\": entry.get(\"date\", \"Ukjent\"),\n",
+    "            \"Temperatur (C)\": entry.get(\"temperature\", \"Ikke tilgjengelig\"),\n",
+    "            \"Luftfuktighet (%)\": entry.get(\"humidity\", \"Ikke tilgjengelig\"),\n",
+    "            \"Trykk (hPa)\": entry.get(\"pressure\", \"Ikke tilgjengelig\"),\n",
+    "            \"Sted\": entry.get(\"siteName\", \"Ukjent\"),\n",
+    "        })\n",
+    "\n",
+    "    # Konverter til pandas DataFrame\n",
+    "    df = pd.DataFrame(målinger)\n",
+    "\n",
+    "    # Lagre til Excel\n",
+    "    filnavn = \"værdata_globe.xlsx\"\n",
+    "    df.to_excel(filnavn, index=False)\n",
+    "\n",
+    "    print(f\"Værdata lagret i {filnavn}\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"Feil ved henting av data: {response.status_code}\")\n",
     "\n"
    ]
   }
@@ -18,8 +64,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
