--- a/tasks/testapi.ipynb
+++ b/tasks/testapi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
     "\n",
     "by = \"søgne\"\n",
     "api_key = \"4df1bbca7b65e146aa75166acfbb019d\"\n",
-    "url = f\"https://api.openweathermap.org/data/2.5/weather?q={by}&appid={api_key}&units=metric\"\n",
+    "url = f\"https://api.openweathermap.org/data/2.5/weather?q={by}&appid={api_key}&units=metric!\"\n",
     "\n",
     "response = requests.get(url)\n",
     "data = response.json()\n",
@@ -48,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
