--- a/data/pandas.ipynb
+++ b/data/pandas.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feil ved henting av data: 400\n"
+      "✅ Værdata lagret i værdata_oslo.csv\n"
      ]
     }
    ],
@@ -17,42 +17,53 @@
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "# Sett inn din API-nøkkel her\n",
+    "# API-opplysninger\n",
     "API_KEY = \"4df1bbca7b65e146aa75166acfbb019d\"\n",
+    "API_URL = \"https://api.openweathermap.org/data/2.5/weather\"\n",
     "\n",
-    "# Endepunkt for GLOBE værdata\n",
-    "API_URL = 'https://api.openweathermap.org/data/2.5/weather'\n",
+    "# Byen du vil hente data for\n",
+    "by = \"Oslo\"\n",
     "\n",
+    "# Send API-forespørsel\n",
+    "params = {\n",
+    "    \"q\": by,\n",
+    "    \"appid\": API_KEY,\n",
+    "    \"units\": \"metric\"  # Gjør temperaturdata leselig (Celsius)\n",
+    "}\n",
     "\n",
-    "# Hent data fra API\n",
-    "response = requests.get(API_URL, headers={\"x-api-key\": API_KEY})\n",
+    "response = requests.get(API_URL, params=params)\n",
     "\n",
     "# Sjekk om forespørselen var vellykket\n",
     "if response.status_code == 200:\n",
     "    data = response.json()\n",
-    "    \n",
-    "    # Ekstraher relevante data\n",
-    "    målinger = []\n",
-    "    for entry in data.get(\"results\", []):\n",
-    "        målinger.append({\n",
-    "            \"Dato\": entry.get(\"date\", \"Ukjent\"),\n",
-    "            \"Temperatur (C)\": entry.get(\"temperature\", \"Ikke tilgjengelig\"),\n",
-    "            \"Luftfuktighet (%)\": entry.get(\"humidity\", \"Ikke tilgjengelig\"),\n",
-    "            \"Trykk (hPa)\": entry.get(\"pressure\", \"Ikke tilgjengelig\"),\n",
-    "            \"Sted\": entry.get(\"siteName\", \"Ukjent\"),\n",
-    "        })\n",
     "\n",
-    "    # Konverter til pandas DataFrame\n",
-    "    df = pd.DataFrame(målinger)\n",
+    "    # Trekker ut nødvendige data\n",
+    "    værdata = [{\n",
+    "        \"By\": data[\"name\"],\n",
+    "        \"Vær\": data[\"weather\"][0][\"description\"],\n",
+    "        \"Temperatur (°C)\": data[\"main\"][\"temp\"],\n",
+    "        \"Føles som (°C)\": data[\"main\"][\"feels_like\"],\n",
+    "        \"Min Temp (°C)\": data[\"main\"][\"temp_min\"],\n",
+    "        \"Max Temp (°C)\": data[\"main\"][\"temp_max\"],\n",
+    "        \"Trykk (hPa)\": data[\"main\"][\"pressure\"],\n",
+    "        \"Luftfuktighet (%)\": data[\"main\"][\"humidity\"],\n",
+    "        \"Vindhastighet (m/s)\": data[\"wind\"][\"speed\"],\n",
+    "        \"Vindretning (°)\": data[\"wind\"][\"deg\"],\n",
+    "        \"Soloppgang\": data[\"sys\"][\"sunrise\"],\n",
+    "        \"Solnedgang\": data[\"sys\"][\"sunset\"]\n",
+    "    }]\n",
     "\n",
-    "    # Lagre til Excel\n",
-    "    filnavn = \"værdata_globe.xlsx\"\n",
-    "    df.to_excel(filnavn, index=False)\n",
+    "    # Konverter til Pandas DataFrame\n",
+    "    df = pd.DataFrame(værdata)\n",
     "\n",
-    "    print(f\"Værdata lagret i {filnavn}\")\n",
+    "    # Lagre som CSV-fil\n",
+    "    filnavn = \"værdata_oslo.csv\"\n",
+    "    df.to_csv(filnavn, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "    print(f\"✅ Værdata lagret i {filnavn}\")\n",
     "\n",
     "else:\n",
-    "    print(f\"Feil ved henting av data: {response.status_code}\")\n"
+    "    print(f\"❌ Feil ved henting av data: {response.status_code} - {response.text}\")\n"
    ]
   }
  ],
