--- a/data/pandas_met.ipynb
+++ b/data/pandas_met.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Værdata lagret i frost_trondheim_30dager3.csv\n"
+      "Værdata lagret i frost_trondheim_30dager3.csv\n"
      ]
     }
    ],
@@ -18,36 +18,36 @@
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "# 🔑 Sett inn din API-nøkkel (Client ID fra Frost API)\n",
+    "# Sett inn din API-nøkkel (Client ID fra Frost API)\n",
     "CLIENT_ID = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"  # Erstatt dette med din riktige nøkkel\n",
     "API_URL = \"https://frost.met.no/observations/v0.jsonld\"\n",
     "\n",
-    "# 🌍 Velg værstasjon i Trondheim (SN68860 = Trondheim - Voll)\n",
+    "# Velg værstasjon i Trondheim (SN68860 = Trondheim - Voll)\n",
     "SOURCE = \"SN68860\"\n",
     "\n",
-    "# 🌡️ Hvilke værdata vi ønsker å hente\n",
+    "# Hvilke værdata vi ønsker å hente\n",
     "ELEMENTS = \"air_temperature,cloud_area_fraction,air_pressure_at_sea_level,precipitation_amount\"\n",
     "\n",
-    "# 📅 Tidsperiode (siste 30 dager)\n",
+    "# Tidsperiode (siste 30 dager)\n",
     "slutt_dato = datetime.utcnow().date()\n",
     "start_dato = slutt_dato - timedelta(days=30)\n",
     "tidspunkt = f\"{start_dato}/{slutt_dato}\"\n",
     "\n",
-    "# 🛠️ Bygg API-forespørselen\n",
+    "# Bygg API-forespørselen\n",
     "params = {\n",
     "    \"sources\": SOURCE,\n",
     "    \"elements\": ELEMENTS,\n",
     "    \"referencetime\": tidspunkt\n",
     "}\n",
     "\n",
-    "# 🔄 Send forespørselen til Frost API\n",
+    "# Send forespørselen til Frost API\n",
     "response = requests.get(API_URL, params=params, auth=(CLIENT_ID, \"\"))\n",
     "\n",
-    "# 🚀 Sjekk om forespørselen var vellykket\n",
+    "# Sjekk om forespørselen var vellykket\n",
     "if response.status_code == 200:\n",
     "    data = response.json()[\"data\"]\n",
     "    \n",
-    "    # 📊 Lagring av værdata (med alle parametere)\n",
+    "    # Lagring av værdata (med alle parametere)\n",
     "    værdata = {}\n",
     "    for entry in data:\n",
     "        dato = entry[\"referenceTime\"].split(\"T\")[0]  # Hent dato\n",
@@ -77,17 +77,17 @@
     "    # Konverter til Pandas DataFrame\n",
     "    df = pd.DataFrame(list(værdata.values()))\n",
     "\n",
-    "    # 🚀 Fyll inn eventuelle manglende verdier med \"0\"\n",
+    "    # Fyll inn eventuelle manglende verdier med \"0\"\n",
     "    df.fillna(0, inplace=True)\n",
     "\n",
-    "    # 📁 Lagre som CSV-fil\n",
+    "    # Lagre som CSV-fil\n",
     "    filnavn = \"frost_trondheim_30dager3.csv\"\n",
     "    df.to_csv(filnavn, index=False, encoding=\"utf-8\")\n",
     "\n",
-    "    print(f\"✅ Værdata lagret i {filnavn}\")\n",
+    "    print(f\"Værdata lagret i {filnavn}\")\n",
     "\n",
     "else:\n",
-    "    print(f\"❌ Feil ved henting av data: {response.status_code} - {response.text}\")\n"
+    "    print(f\"Feil ved henting av data: {response.status_code} - {response.text}\")\n"
    ]
   }
  ],
