--- a/data/pandas_met.ipynb
+++ b/data/pandas_met.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "# Sett inn din API-nøkkel (Client ID fra Frost API)\n",
-    "CLIENT_ID = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"  # Erstatt dette med din riktige nøkkel\n",
+    "CLIENT_ID = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"  ## SENDTE ANNEN APIKEY PÅ MESSENGER\n",
     "API_URL = \"https://frost.met.no/observations/v0.jsonld\"\n",
     "\n",
     "# Velg værstasjon i Trondheim (SN68860 = Trondheim - Voll)\n",
