15 -> per frost_air_temperature_dag

--- a/data/API_ny.ipynb
+++ b/data/API_ny.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,36 @@
     "# Hent og lagre data for hvert element\n",
     "for element_id, label in elements.items():\n",
     "    fetch_data(element_id, label)\n",
-    "    \n"
+    "    \n",
+    "## Temp filen er nå i 15 min oppløsning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Daglig gjennomsnitt lagret i frost_air_temperature_daglig_gjennomsnitt.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### TEMPFIL 15MIN -> GJENOMSNITT DAG\n",
+    "import pandas as pd\n",
+    "# Les inn filen med temperaturmålinger\n",
+    "df = pd.read_csv(\"frost_air_temperature_jul-des_2024.csv\")\n",
+    "\n",
+    "# Beregn gjennomsnittstemperatur per dag\n",
+    "daglig_gjennomsnitt = df.groupby(\"Dato\")[\"Temperatur (°C)\"].mean().reset_index()\n",
+    "\n",
+    "# Lagre til ny CSV-fil\n",
+    "daglig_gjennomsnitt.to_csv(\"frost_air_temperature_daglig_gjennomsnitt.csv\", index=False)\n",
+    "\n",
+    "print(\"Daglig gjennomsnitt lagret i frost_air_temperature_daglig_gjennomsnitt.csv\")\n"
    ]
   }
  ],
