--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,11 +42,59 @@
     "# Forhåndsvisning\n",
     "print(samlet.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 183 entries, 0 to 182\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   Dato                          183 non-null    object \n",
+      " 1   Temperatur (°C) daglig snitt  183 non-null    float64\n",
+      " 2   Lufttrykk (hPa)               183 non-null    float64\n",
+      " 3   Nedbør (mm)                   183 non-null    float64\n",
+      "dtypes: float64(3), object(1)\n",
+      "memory usage: 7.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "samlet.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dato                            0\n",
+      "Temperatur (°C) daglig snitt    0\n",
+      "Lufttrykk (hPa)                 0\n",
+      "Nedbør (mm)                     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(samlet.isnull().sum())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -60,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
