--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -53,7 +53,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 183 entries, 0 to 182\n",
+      "RangeIndex: 183 entries, 0 to 182\n",
       "Data columns (total 4 columns):\n",
       " #   Column                        Non-Null Count  Dtype  \n",
       "---  ------                        --------------  -----  \n",
@@ -62,7 +62,7 @@
       " 2   Lufttrykk (hPa)               183 non-null    float64\n",
       " 3   Nedbør (mm)                   183 non-null    float64\n",
       "dtypes: float64(3), object(1)\n",
-      "memory usage: 7.1+ KB\n"
+      "memory usage: 5.8+ KB\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,75 @@
     }
    ],
    "source": [
-    "print(samlet.isnull().sum())"
+    "print(samlet.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dato</th>\n",
+       "      <th>Temperatur (°C) daglig snitt</th>\n",
+       "      <th>Lufttrykk (hPa)</th>\n",
+       "      <th>Nedbør (mm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-07-06</td>\n",
+       "      <td>12.230556</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2024-08-03</td>\n",
+       "      <td>17.032639</td>\n",
+       "      <td>1006.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
+       "5   2024-07-06                     12.230556              NaN          3.2\n",
+       "33  2024-08-03                     17.032639           1006.8          NaN"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sammenslaaing = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
+    "\n",
+    "df_sammenslaaing.loc[df_sammenslaaing.isnull().any(axis=1)]\n"
    ]
   }
  ],
