--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -154,6 +154,8 @@
     }
    ],
    "source": [
+    "# Kode for å lokalisere \"NA\" verdier\n",
+    "\n",
     "df_sammenslaaing = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
     "df_sammenslaaing.loc[df_sammenslaaing.isnull().any(axis=1)]\n"
