endret til NA på temp

--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -134,9 +134,9 @@
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>2024-08-03</td>\n",
-       "      <td>17.032639</td>\n",
-       "      <td>1006.8</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1006.8</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,10 +145,10 @@
       "text/plain": [
        "          Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
        "5   2024-07-06                     12.230556              NaN          3.2\n",
-       "33  2024-08-03                     17.032639           1006.8          NaN"
+       "33  2024-08-03                           NaN           1006.8          0.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
