--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -45,6 +45,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identifisere og håndtere manglende verdier i datasettet:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,11 +163,20 @@
     }
    ],
    "source": [
-    "# Kode for å lokalisere \"NA\" verdier\n",
+    "# Kode for å lokalisere \"NaN\" verdier\n",
     "\n",
     "df_sammenslaaing = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
     "df_sammenslaaing.loc[df_sammenslaaing.isnull().any(axis=1)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sammenslaaing_UtenFeil = df_sammenslaaing.copy()"
    ]
   }
  ],
