--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -62,7 +62,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 183 entries, 0 to 182\n",
+      "Int64Index: 183 entries, 0 to 182\n",
       "Data columns (total 4 columns):\n",
       " #   Column                        Non-Null Count  Dtype  \n",
       "---  ------                        --------------  -----  \n",
@@ -71,7 +71,7 @@
       " 2   Lufttrykk (hPa)               183 non-null    float64\n",
       " 3   Nedbør (mm)                   183 non-null    float64\n",
       "dtypes: float64(3), object(1)\n",
-      "memory usage: 5.8+ KB\n"
+      "memory usage: 7.1+ KB\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,31 +133,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-07-06</td>\n",
-       "      <td>12.230556</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2024-08-03</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1006.8</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
-       "5   2024-07-06                     12.230556              NaN          3.2\n",
-       "33  2024-08-03                           NaN           1006.8          0.0"
+       "Empty DataFrame\n",
+       "Columns: [Dato, Temperatur (°C) daglig snitt, Lufttrykk (hPa), Nedbør (mm)]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,12 +158,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_sammenslaaing_UtenFeil = df_sammenslaaing.copy()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
+    "df_sammenslaaing_UtenFeil.to_csv(\"Sammenslaaing_uten_feil.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
