endret kommentarer, og skrevet read me oppsummering

--- a/tasks/API_ny.ipynb
+++ b/tasks/API_ny.ipynb
@@ -23,27 +23,27 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# API-nøkkel og stasjon\n",
-    "CLIENT_ID = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"\n",
+    "# Lagrer API-nøkkel\n",
+    "API = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"\n",
     "SOURCE = \"SN68860\"\n",
     "\n",
-    "# Dato-intervall\n",
-    "start_date = \"2024-07-01\"\n",
-    "end_date = \"2024-12-31\"\n",
-    "reference_time = f\"{start_date}/{end_date}\"\n",
+    "# Setter et intervall for start og slutt dato\n",
+    "start_dato = \"2024-07-01\"\n",
+    "slutt_dato = \"2024-12-31\"\n",
+    "reference_time = f\"{start_dato}/{slutt_dato}\"\n",
     "\n",
-    "# Frost API-url\n",
+    "# API-url fra Frost\n",
     "BASE_URL = \"https://frost.met.no/observations/v0.jsonld\"\n",
     "\n",
-    "# Elementer som skal hentes og deres etiketter\n",
+    "# Navngir kolonner for verdier som skal hentes fra APIen\n",
     "elements = {\n",
     "    \"air_temperature\": \"Temperatur (°C)\",\n",
     "    \"mean(air_pressure_at_sea_level P1D)\": \"Lufttrykk (hPa)\",\n",
     "    \"sum(precipitation_amount P1D)\": \"Nedbør (mm)\"\n",
     "}\n",
     "\n",
-    "# Brukerinput for å bestemme om man skal hente nye data\n",
-    "force_update = input(\"Vil du hente nye data fra Frost API? (ja/ne): \").strip().lower()\n",
+    "# Input for å bestemme om man skal hente ny data eller ikke\n",
+    "force_update = input(\"Vil du hente nye data fra Frost API? (ja/nei): \").strip().lower()\n",
     "\n",
     "# Funksjon for å hente og lagre data\n",
     "def fetch_data(element_id, label):\n",
@@ -61,7 +61,7 @@
     "        \"referencetime\": reference_time\n",
     "    }\n",
     "\n",
-    "    response = requests.get(BASE_URL, params=params, auth=(CLIENT_ID, \"\"))\n",
+    "    response = requests.get(BASE_URL, params=params, auth=(API, \"\"))\n",
     "    \n",
     "    if response.status_code == 200:\n",
     "        raw_data = response.json()[\"data\"]\n",
@@ -79,11 +79,10 @@
     "        print(f\"Feil ved henting av {element_id}: {response.status_code}\")\n",
     "        print(response.text)\n",
     "\n",
-    "# Hent og lagre data for hvert element\n",
+    "# Henter og lagre data for hvert element\n",
     "for element_id, label in elements.items():\n",
     "    fetch_data(element_id, label)\n",
-    "    \n",
-    "## Temp filen er nå i 15 min oppløsning"
+    "    "
    ]
   },
   {
@@ -100,9 +99,10 @@
     }
    ],
    "source": [
-    "#### TEMPFIL 15MIN -> GJENOMSNITT DAG\n",
+    "# TEMPFIL 15MIN -> GJENOMSNITT DAG\n",
+    "\n",
     "import pandas as pd\n",
-    "# Les inn filen med temperaturmålinger\n",
+    "# Leser inn filen med temperaturmålinger\n",
     "df = pd.read_csv(\"frost_air_temperature_jul-des_2024.csv\")\n",
     "\n",
     "# Beregn gjennomsnittstemperatur per dag\n",
