--- a/tasks/code.ipynb
+++ b/tasks/code.ipynb
@@ -22,33 +22,30 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Load environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
-    "# Access the environment variables\n",
+    "# Gir tilgang til data fra APIen\n",
     "api_key = os.getenv('API_KEY')  # Sørg for at du har riktig nøkkel i .env-filen\n",
     "base_url = 'https://api.openweathermap.org/data/2.5/weather'\n",
     "\n",
-    "# Fyll ut byen\n",
     "city = 'Trondheim'\n",
     "\n",
-    "# Bygg URL-en med API-nøkkelen og byen\n",
+    "# Lager URL-en med API-nøkkelen og byen\n",
     "url = f\"{base_url}?q={city}&appid={api_key}&units=metric\"\n",
     "\n",
-    "# Gjør forespørselen\n",
     "res = requests.get(url)\n",
     "data = res.json()\n",
     "\n",
-    "# Hent værdataene\n",
+    "# Henter værdataene\n",
     "humidity = data['main']['humidity']\n",
     "pressure = data['main']['pressure']\n",
     "wind = data['wind']['speed']\n",
     "description = data['weather'][0]['description']\n",
     "temp = data['main']['temp']\n",
     "\n",
-    "#Leah mener det er lurt å ta inn klokkeslett, viktig her å tenke litt\n",
+    "#Lurt å ta inn klokkeslett?\n",
     "\n",
-    "# Skriv ut resultatene\n",
+    "# Skriver ut resultatene\n",
     "print('Temperature:', temp, '°C')\n",
     "print('Wind:', wind)\n",
     "print('Pressure:', pressure)\n",
