--- a/tasks/pandas.ipynb
+++ b/tasks/pandas.ipynb
@@ -17,7 +17,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "# API-opplysninger\n",
+    "# API info\n",
     "API_KEY = \"4df1bbca7b65e146aa75166acfbb019d\"\n",
     "API_URL = \"https://api.openweathermap.org/data/2.5/weather\"\n",
     "\n",
