--- a/tasks/pandas_met.ipynb
+++ b/tasks/pandas_met.ipynb
@@ -34,14 +34,14 @@
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "# Sett inn din API-nøkkel (Client ID fra Frost API)\n",
+    "# API nøkkel fra Frost\n",
     "CLIENT_ID = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"  ## SENDTE ANNEN APIKEY PÅ MESSENGER\n",
     "API_URL = \"https://frost.met.no/observations/v0.jsonld\"\n",
     "\n",
-    "# Velg værstasjon i Trondheim (SN68860 = Trondheim - Voll)\n",
+    "# Velger værstasjon i Trondheim\n",
     "SOURCE = \"SN68860\"\n",
     "\n",
-    "# Hvilke værdata vi ønsker å hente\n",
+    "# Velger hvilke værdata vi ønsker å hente\n",
     "ELEMENTS = \"air_temperature,cloud_area_fraction,air_pressure_at_sea_level,precipitation_amount\"\n",
     "\n",
     "# Tidsperiode (siste 30 dager)\n",
