--- a/tasks/sammenslaaing.ipynb
+++ b/tasks/sammenslaaing.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Les inn filene\n",
+    "# Leser inn filene\n",
     "df_temp = pd.read_csv(\"frost_air_temperature_jul-des_2024.csv\")\n",
     "df_gj = pd.read_csv(\"frost_air_temperature_daglig_gjennomsnitt.csv\")\n",
     "df_trykk = pd.read_csv(\"frost_meanair_pressure_at_sea_level_P1D_jul-des_2024.csv\")\n",
@@ -40,7 +40,6 @@
     "    .merge(df_trykk, on=\"Dato\", how=\"left\") \\\n",
     "    .merge(df_nedbør, on=\"Dato\", how=\"left\")\n",
     "\n",
-    "# Rydd opp i kolonnenavn (valgfritt)\n",
     "samlet.rename(columns={\n",
     "    \"Temperatur (°C)_x\": \"Temperatur (°C)\",\n",
     "    \"Temperatur (°C)_y\": \"Temperatur (°C) daglig snitt\"\n",
@@ -49,7 +48,6 @@
     "# Lagre til fil\n",
     "samlet.to_csv(\"Sammenslåing_data.csv\", index=False)\n",
     "\n",
-    "# Forhåndsvisning\n",
     "print(samlet.head())\n"
    ]
   }
