--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Samler data for temperatur, lufttrykk og nedbør i en csv fil:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -21,35 +28,31 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Les inn filene\n",
+    "# Leser inn de 3 filene for vær verdier\n",
     "df_gj = pd.read_csv(\"frost_air_temperature_daglig_gjennomsnitt.csv\")\n",
     "df_trykk = pd.read_csv(\"frost_meanair_pressure_at_sea_level_P1D_jul-des_2024.csv\")\n",
     "df_nedbør = pd.read_csv(\"frost_sumprecipitation_amount_P1D_jul-des_2024.csv\")\n",
     "\n",
-    "# Slå sammen alle datasettene på \"Dato\"\n",
+    "# Slår sammen filene til en fil, basert på dato\n",
     "samlet = df_gj \\\n",
     "    .merge(df_trykk, on=\"Dato\", how=\"left\") \\\n",
     "    .merge(df_nedbør, on=\"Dato\", how=\"left\")\n",
     "\n",
-    "# Rydd opp i kolonnenavn hvis nødvendig\n",
     "samlet.rename(columns={\n",
     "    \"Temperatur (°C)\": \"Temperatur (°C) daglig snitt\"\n",
     "}, inplace=True)\n",
     "\n",
-    "# Lagre til fil\n",
+    "# Oppretter ny fil for samlet verdier\n",
     "samlet.to_csv(\"Sammenslaaing_gjsnitt.csv\", index=False)\n",
     "\n",
-    "# Forhåndsvisning\n",
     "print(samlet.head())\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Identifisere og håndtere manglende verdier i datasettet:"
+    "Identifisere og håndtere manglende verdier i datasettet:"
    ]
   },
   {
@@ -101,8 +104,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kode for å lokalisere \"NaN\" verdier:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,27 +143,48 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-07-06</td>\n",
+       "      <td>12.230556</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2024-08-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1006.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Dato, Temperatur (°C) daglig snitt, Lufttrykk (hPa), Nedbør (mm)]\n",
-       "Index: []"
+       "          Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
+       "5   2024-07-06                     12.230556              NaN          3.2\n",
+       "33  2024-08-03                           NaN           1006.8          0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Kode for å lokalisere \"NaN\" verdier\n",
+    "import pandas as pd\n",
     "\n",
     "df_sammenslaaing = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
     "df_sammenslaaing.loc[df_sammenslaaing.isnull().any(axis=1)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lager ny csv for oppdaterte (riktige) verdier:"
    ]
   },
   {
@@ -166,6 +197,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kode for å rette opp i eventuelle negative nedbør verdier:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -174,18 +212,11 @@
     "df_sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
     "df_sammenslaaing_UtenFeil.to_csv(\"Sammenslaaing_uten_feil.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
