lagt til sjekk av dato

--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,31 +143,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-07-06</td>\n",
-       "      <td>12.230556</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2024-08-03</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1006.8</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
-       "5   2024-07-06                     12.230556              NaN          3.2\n",
-       "33  2024-08-03                           NaN           1006.8          0.0"
+       "Empty DataFrame\n",
+       "Columns: [Dato, Temperatur (°C) daglig snitt, Lufttrykk (hPa), Nedbør (mm)]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,18 +191,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
     "df_sammenslaaing_UtenFeil.to_csv(\"Sammenslaaing_uten_feil.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kode for å rette opp i dato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
+      "0 2024-07-01                     10.393750           1003.0          8.0\n",
+      "1 2024-07-02                     10.177778           1002.9          3.6\n",
+      "2 2024-07-03                     11.973611           1000.5          2.0\n",
+      "3 2024-07-04                     15.785417            993.2          0.1\n",
+      "4 2024-07-05                     12.113889            991.8          7.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gjør at 'Dato' er i datetime-format\n",
+    "df_sammenslaaing_UtenFeil['Dato'] = pd.to_datetime(df_sammenslaaing_UtenFeil['Dato'])\n",
+    "\n",
+    "# Start fra første dato og generer resten\n",
+    "start_dato = df_sammenslaaing_UtenFeil.loc[0, 'Dato']\n",
+    "riktige_datoer = [start_dato + pd.Timedelta(days=i) for i in range(len(df_sammenslaaing_UtenFeil))]\n",
+    "\n",
+    "# Sett inn de riktige datoene\n",
+    "df_sammenslaaing_UtenFeil['Dato'] = riktige_datoer\n",
+    "\n",
+    "print(df_sammenslaaing_UtenFeil.head())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -230,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
