--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,12 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kode for å rette opp i dato"
+    "Gjør at datoene blir i datetime-format så ikke det er noen skrivefeil i datoene henta:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +234,7 @@
     "\n",
     "# Sett inn de riktige datoene\n",
     "df_sammenslaaing_UtenFeil['Dato'] = riktige_datoer\n",
+    "\n",
     "\n",
     "print(df_sammenslaaing_UtenFeil.head())"
    ]
