Lagd ny fil skydekke_luftfuktighet som lager plots

--- a/tasks/API_ny.ipynb
+++ b/tasks/API_ny.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "Henter data for Temperatur (°C)...\n",
-      "Lagret til: frost_air_temperature_jul-des_2024.csv\n",
+      "Lagret til: data\\frost_air_temperature_jul-des_2024.csv\n",
       "Henter data for Lufttrykk (hPa)...\n",
-      "Lagret til: frost_meanair_pressure_at_sea_level_P1D_jul-des_2024.csv\n",
+      "Lagret til: data\\frost_meanair_pressure_at_sea_level_P1D_jul-des_2024.csv\n",
       "Henter data for Nedbør (mm)...\n",
-      "Lagret til: frost_sumprecipitation_amount_P1D_jul-des_2024.csv\n"
+      "Lagret til: data\\frost_sumprecipitation_amount_P1D_jul-des_2024.csv\n"
      ]
     }
    ],
@@ -22,6 +22,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "import os\n",
+    "os.makedirs(\"data\", exist_ok=True) # Sørger for at \"data\" mappen finnes\n",
     "\n",
     "# Lagrer API-nøkkel\n",
     "API = \"2a430097-ac9b-44e4-995e-a02afb9795b2\"\n",
@@ -47,7 +48,8 @@
     "\n",
     "# Funksjon for å hente og lagre data\n",
     "def fetch_data(element_id, label):\n",
-    "    filename = f\"frost_{element_id.replace('(', '').replace(')', '').replace(' ', '_')}_jul-des_2024.csv\"\n",
+    "    filename = os.path.join(\"data\", f\"frost_{element_id.replace('(', '').replace(')', '').replace(' ', '_')}_jul-des_2024.csv\")\n",
+    "\n",
     "    \n",
     "    if os.path.exists(filename) and force_update != \"ja\":\n",
     "        print(\"Bruker eksisterende fil:\", filename)\n",
@@ -103,13 +105,14 @@
     "\n",
     "import pandas as pd\n",
     "# Leser inn filen med temperaturmålinger\n",
-    "df = pd.read_csv(\"frost_air_temperature_jul-des_2024.csv\")\n",
+    "df = pd.read_csv(\"data/frost_air_temperature_jul-des_2024.csv\")\n",
     "\n",
     "# Beregn gjennomsnittstemperatur per dag\n",
     "daglig_gjennomsnitt = df.groupby(\"Dato\")[\"Temperatur (°C)\"].mean().reset_index()\n",
     "\n",
     "# Lagre til ny CSV-fil\n",
-    "daglig_gjennomsnitt.to_csv(\"frost_air_temperature_daglig_gjennomsnitt.csv\", index=False)\n",
+    "daglig_gjennomsnitt.to_csv(\"data/frost_air_temperature_daglig_gjennomsnitt.csv\", index=False)\n",
+    "\n",
     "\n",
     "print(\"Daglig gjennomsnitt lagret i frost_air_temperature_daglig_gjennomsnitt.csv\")\n"
    ]
