--- a/data/sammenslaaing_gjsnitt.ipynb
+++ b/data/sammenslaaing_gjsnitt.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -143,17 +143,31 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-07-06</td>\n",
+       "      <td>12.230556</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2024-08-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1006.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Dato, Temperatur (°C) daglig snitt, Lufttrykk (hPa), Nedbør (mm)]\n",
-       "Index: []"
+       "          Dato  Temperatur (°C) daglig snitt  Lufttrykk (hPa)  Nedbør (mm)\n",
+       "5   2024-07-06                     12.230556              NaN          3.2\n",
+       "33  2024-08-03                           NaN           1006.8          0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,16 +200,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kode for å rette opp i eventuelle negative nedbør verdier:"
+    "Kode for å rette opp i eventuelle negative nedbør og/eller lufttrykk-verdier:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_sammenslaaing_UtenFeil['Nedbør (mm)'] = [abs(x) for x in df_sammenslaaing_UtenFeil['Nedbør (mm)']]\n",
+    "df_sammenslaaing_UtenFeil.to_csv(\"Sammenslaaing_uten_feil.csv\")\n",
+    "\n",
+    "df_sammenslaaing_UtenFeil['Lufttrykk (hPa)'] = [abs(x) for x in df_sammenslaaing_UtenFeil['Lufttrykk (hPa)']]\n",
     "df_sammenslaaing_UtenFeil.to_csv(\"Sammenslaaing_uten_feil.csv\")"
    ]
   },
@@ -238,11 +255,85 @@
     "\n",
     "print(df_sammenslaaing_UtenFeil.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kode for å rette opp i ussansynlige temperaturverdier, samt itterere for å sjekke om en temperatur ikke gir verdier(NaN). Bytter ut disse mistenkelige verdiene med ett gjennomsnitt fra dagen før opg dagen etter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Les inn CSV-filen\n",
+    "df = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
+    "\n",
+    "# Gå gjennom temperaturkolonnen med indekser\n",
+    "for i in range(1, len(df) - 1):  \n",
+    "    temp = df.loc[i, \"Temperatur (°C) daglig snitt\"]\n",
+    "\n",
+    "    # Hvis verdien er mistenkelig eller tom\n",
+    "    if pd.isna(temp) or temp <= -50 or temp >= 50:\n",
+    "\n",
+    "        # Gjennomsnitt av dagen før og dagen etter\n",
+    "        temp_forrige = df.loc[i - 1, \"Temperatur (°C) daglig snitt\"]\n",
+    "        temp_etter = df.loc[i + 1, \"Temperatur (°C) daglig snitt\"]\n",
+    "        gjennomsnitt = (temp_forrige + temp_etter) / 2\n",
+    "\n",
+    "        # Erstatt verdien\n",
+    "        df.loc[i, \"Temperatur (°C) daglig snitt\"] = gjennomsnitt\n",
+    "\n",
+    "# Skriv til filen uten feil\n",
+    "df.to_csv(\"Sammenslaaing_uten_feil.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kode for å teste om lufttrykk-verdien er tom:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Les inn CSV-filen\n",
+    "df = pd.read_csv(\"Sammenslaaing_gjsnitt.csv\")\n",
+    "\n",
+    "# Gå gjennom temperaturkolonnen med indekser\n",
+    "for i in range(1, len(df) - 1):  \n",
+    "    trykk = df.loc[i, \"Lufttrykk (hPa)\"]\n",
+    "\n",
+    "    # Hvis verdien er mistenkelig eller tom\n",
+    "    if pd.isna(trykk):\n",
+    "\n",
+    "        # Gjennomsnitt av dagen før og dagen etter\n",
+    "        trykk_forrige = df.loc[i - 1, \"Lufttrykk (hPa)\"]\n",
+    "        trykk_etter = df.loc[i + 1, \"Lufttrykk (hPa)\"]\n",
+    "        gjennomsnitt = (trykk_forrige + trykk_etter) / 2\n",
+    "\n",
+    "        # Erstatt verdien\n",
+    "        df.loc[i, \"Lufttrykk (hPa)\"] = gjennomsnitt\n",
+    "\n",
+    "# Skriv til filen uten feil\n",
+    "df.to_csv(\"Sammenslaaing_uten_feil.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
